[package]
name = "triton-privacy"
version = "0.1.0"
description = "Institutional DeFi with Compliance & Privacy on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "triton_privacy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
solana-program = "1.18.26"
ephemeral-rollups-sdk = { version = "0.8.0", optional = true }

[dev-dependencies]
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
